# csge

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/inc/core/: node.h  nodelist.h  program.h  quad.h  quadbatch.h  scene.h  shader.h  sprite.h  texture.h  window.h
core/src/: node.cpp  program.cpp  quad.cpp  quadbatch.cpp  scene.cpp  shader.cpp  sprite.cpp  texture.cpp  window.cpp
example/: CMakeLists.txt
example/inc/: app.h  engine.h  resources.h
example/src/: app.cpp  config.cpp  engine.cpp  main.cpp  resources.cpp  shaders.cpp
